--- a/DGI-PyTorch/main.ipynb
+++ b/DGI-PyTorch/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "72f55cbb-676d-4c64-9653-64a1ce92f350",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,6 @@
     "from models import AvgReadout, LogReg\n",
     "from models import Discriminator\n",
     "from models import GCN\n",
-    "from models import DGI\n",
     "\n",
     "import torch_geometric.transforms as T\n",
     "from torch_geometric.nn import GCNConv"
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bd52617b",
    "metadata": {},
    "outputs": [],
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "eab3366f",
    "metadata": {},
    "outputs": [],
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9b67c46b",
    "metadata": {},
    "outputs": [],
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8a95c2f6-12d6-49e8-8edb-55f567a48e61",
    "metadata": {},
    "outputs": [],
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "643237f9-e528-463f-a289-316420808529",
    "metadata": {},
    "outputs": [
@@ -132,7 +131,7 @@
     "# training params\n",
     "batch_size = 1\n",
     "nb_epochs = 10000\n",
-    "patience = 50\n",
+    "patience = 20\n",
     "lr = 0.001\n",
     "l2_coef = 0.0\n",
     "drop_prob = 0.0\n",
@@ -187,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "36812e6f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17f1aae854d4402885e5ab5611dd0f23",
+       "model_id": "c6bb5848a5244328a151b70048895d9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,21 +208,256 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loss: tensor(0.6931, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6924, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6871, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6855, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6808, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6756, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6719, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6633, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6580, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6484, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6424, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6310, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6216, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.6103, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.5983, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.5842, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.5721, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.5621, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.5512, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.5357, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.5163, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.5080, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.4934, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.4752, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.4639, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.4497, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.4320, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.4177, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.4100, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3977, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3792, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3745, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3548, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3443, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3299, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3243, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3175, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3123, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.3027, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2967, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2846, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2781, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2682, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2561, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2449, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2407, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2405, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2275, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2195, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2115, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.2001, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1959, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1956, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1927, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1764, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1759, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1716, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1627, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1539, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1521, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1443, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1359, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1335, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1332, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1325, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1276, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1225, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1175, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1150, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1149, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1119, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1083, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1071, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.1008, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0964, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0945, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0895, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0862, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0786, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0753, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0688, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0679, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0679, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0671, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0670, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0636, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0622, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0617, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0588, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0558, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0532, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0521, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0496, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0476, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0423, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0398, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0395, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0327, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0325, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0311, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0301, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0294, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0282, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0278, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0258, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0239, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0238, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0224, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0212, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0209, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0187, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0183, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0163, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0141, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0136, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0124, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0124, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
+      "Loss: tensor(0.0123, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
       "Loss: tensor(0.0112, device='cuda:0',\n",
       "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
-      "Loss: tensor(0.0110, device='cuda:0',\n",
+      "Loss: tensor(0.0108, device='cuda:0',\n",
       "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
-      "Loss: tensor(0.0096, device='cuda:0',\n",
+      "Loss: tensor(0.0102, device='cuda:0',\n",
       "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
       "Loss: tensor(0.0095, device='cuda:0',\n",
       "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
-      "Loss: tensor(0.0088, device='cuda:0',\n",
+      "Loss: tensor(0.0090, device='cuda:0',\n",
       "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
-      "Loss: tensor(0.0081, device='cuda:0',\n",
+      "Loss: tensor(0.0090, device='cuda:0',\n",
       "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
-      "Loss: tensor(0.0077, device='cuda:0',\n",
-      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n",
-      "Early stopping!\n"
+      "Loss: tensor(0.0071, device='cuda:0',\n",
+      "       grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n"
      ]
     }
    ],
@@ -268,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "d87697d0",
    "metadata": {},
    "outputs": [
@@ -276,7 +510,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading 125th epoch\n"
+      "Loading 3th epoch\n"
      ]
     }
    ],
@@ -301,14 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "8a6c3c7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e15b820839fc4431aa409be09e80d94c",
+       "model_id": "8a692d6a27de493faa3a3f0d827c45c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -323,7 +557,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average accuracy: tensor([0.8250], device='cuda:0')\n"
+      "Average accuracy: tensor([0.8196], device='cuda:0')\n"
      ]
     }
    ],
@@ -359,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "85438ed3",
    "metadata": {},
    "outputs": [
@@ -367,14 +601,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean accuracy: 82.49600219726562\n",
-      "mean accuracy: 0.15380848944187164\n"
+      "mean accuracy: 81.9580078125\n",
+      "standard deviation: 0.202121764421463\n"
      ]
     }
    ],
    "source": [
     "print(\"mean accuracy: {}\".format(accs.mean()))\n",
-    "print(\"standard deviation accuracy: {}\".format(accs.std()))"
+    "print(\"standard deviation: {}\".format(accs.std()))"
    ]
   },
   {
